# MacDoctor

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  quick_test_fixes.py  spec.md
examples/: basic_usage.py  langchain_tools_demo.py
mac_doctor/: __init__.py  __main__.py  config.py  error_handling.py  interfaces.py  langchain_tools.py  logging_config.py  output_parsing.py  system_validator.py  tool_registry.py
mac_doctor/agent/: __init__.py  diagnostic_agent.py
mac_doctor/cli/: __init__.py  main.py  setup.py
mac_doctor/core/: __init__.py  action_engine.py  report_generator.py
mac_doctor/llm/: __init__.py  factory.py  providers.py
mac_doctor/mcps/: __init__.py  disk_mcp.py  dtrace_mcp.py  logs_mcp.py  network_mcp.py  process_mcp.py  vmstat_mcp.py
tests/: __init__.py
tests/e2e/: test_cli_e2e.py  test_integration_workflows.py
tests/unit/: __init__.py  test_action_engine.py  test_cli_main.py  test_cli_setup.py  test_config.py  test_diagnostic_agent.py  test_disk_mcp.py  test_dtrace_mcp.py  test_error_handling.py  test_langchain_tools.py  test_llm_factory.py  test_llm_providers.py  test_logging_config.py  test_logs_mcp.py  test_network_mcp.py  test_output_parsing.py  test_process_mcp.py  test_report_generator.py  test_system_validator.py  test_tool_registry.py  test_vmstat_mcp.py
